1、调整HttpClient实现